fix: hide agenda header button on mobile

--- a/agenda.css
+++ b/agenda.css
@@ -450,6 +450,10 @@ a {
     display: inline-flex;
     flex-direction: column;
   }
+
+  .desktop-only {
+    display: none;
+  }
 }
 
 @media (max-width: 520px) {
